--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-g
+<!DOCTYPE html>
+
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Learning HTML</title>
+  </head>
+
+  <body>
+    <!-- heading, paragraf, dll. gunanya buat memperbaik search engine + codenya -->
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
+
+    <p>paragraf</p>
+    <p>paragraf</p>
+
+    <!-- list: Order + Unorder  -->
+    <ol>
+      <li>sesuatu</li>
+      <li>sesuatu</li>
+      <li>sesuatu</li>
+    </ol>
+
+    <ul>
+      <li>sesuatu</li>
+      <li>sesuatu</li>
+      <li>sesuatu</li>
+    </ul>
+
+    <table>
+      <tr>
+        <td>data 1</td>
+        <td>data 2</td>
+        <td>data 3</td>
+      </tr>
+      <tr>
+        <td>data 1</td>
+        <td>data 2</td>
+        <td>data 3</td>
+      </tr>
+    </table>
+
+    <!-- di dalem html itu ada inline sama block elemet
+    inline elemet: itu sejajar
+    block elemet: maunya sendir sendiri -->
+  </body>
+</html>
