--- a/index.html
+++ b/index.html
@@ -49,5 +49,51 @@
     <!-- di dalem html itu ada inline sama block elemet
     inline elemet: itu sejajar
     block elemet: maunya sendir sendiri -->
+
+    <span>1</span>
+    <span>2</span>
+
+    <div>1</div>
+    <div>2</div>
+
+    <!-- break -->
+    <br /><br /><br />
+
+    <!-- horizontal line -->
+    <hr />
+    <hr />
+    <hr />
+
+    <!-- form itu ada temennya (icon & label) -->
+    <form action="">
+      <label for="username">username</label>
+      <input type="text" id="username" minlength="5" maxlength="6" />
+      <br />
+      <label for="email">email</label>
+      <input type="email" id="email" />
+      <br />
+      <label for="password">password</label>
+      <input type="password" id="password" />
+      <br />
+
+      <input type="radio" name="gender" id="" />
+      <label for="radio">male</label>
+      <input type="radio" name="gender" id="" />
+      <label for="radio">female</label>
+      <br />
+
+      <input type="checkbox" name="tnc" id="" />
+      <label for="checkbox">term and condition 1</label>
+      <br />
+      <input type="checkbox" name="tnc" id="" />
+      <label for="checkbox">term and condition 2</label>
+      <br />
+
+      <textarea name="" id="" cols="30" rows="10"></textarea>
+      <br />
+
+      <button>saya adalah tombol</button>
+      <input type="button" value="pass" />
+    </form>
   </body>
 </html>
