--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning HTML</title>
+    <link rel="stylesheet" href="gaya.css" />
   </head>
 
   <body>
     <!-- heading, paragraf, dll. gunanya buat memperbaik search engine + codenya -->
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <h4>Heading 4</h4>
-    <h5>Heading 5</h5>
-    <h6>Heading 6</h6>
+    <h1 id="satu" class="gaya1">Heading 1</h1>
+    <h1 class="gaya1">Heading 1</h1>
+    <h2 class="gaya1">Heading 2</h2>
+    <h3 class="gaya1">Heading 3</h3>
+    <h4 class="gaya1">Heading 4</h4>
+    <h5 class="gaya1">Heading 5</h5>
+    <h6 class="gaya1">Heading 6</h6>
 
     <p>paragraf</p>
     <p>paragraf</p>
